# ops-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  prd.md  render.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260610_0001_seeded_saas_domain.py  20260611_0002_add_incidents.py  20260612_0003_add_knowledge_documents.py  20260613_0004_add_agent_runs.py  20260624_0005_add_approval_actions.py  20260625_0006_add_observability_eval_suite.py  20260706_0009_add_hot_path_indexes.py  20260708_0011_wire_agent_version_to_runs.py  (+7 more)
apps/api/app/: bootstrap.py  cache.py  celery_app.py  logging_config.py  main.py  models.py  seed.py
apps/api/tests/: test_accounts.py  test_agent_investigations.py  test_agent_llm_integration.py  test_agents_registry.py  test_anomalies_and_incidents.py  test_approvals_and_actions.py  test_blocked_tool_steps.py  test_bootstrap.py  test_cache.py  test_celery_config.py  test_celery_timeout.py  test_config.py  test_dashboard_api.py  test_error_envelope.py  test_eval_comparison.py  test_evals.py  test_health.py  test_knowledge.py  test_llm.py  test_logging.py  test_migrations.py  test_model_usage.py  test_phase5_evals.py  test_phase6_portfolio_package.py  test_prd_api_contract.py  test_project1_upgrade.py  test_rate_limiting.py  test_read_endpoints_perf.py  test_runs_api.py  test_runs_lifecycle.py  test_seed_and_metrics.py  test_tool_policy.py  test_tools_registry.py  test_tracing_providers.py  test_version_immutability.py
(+166 files in other folders)
