[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-agent-api"
version = "0.1.0"
description = "FastAPI backend for the Ops Agent project."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi[standard]>=0.115,<1",
  "langfuse>=3,<4",
  "langgraph>=1.0,<2",
  "langsmith>=0.3.13,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "redis>=5,<6",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2.4,<3",
  "pytest>=8,<9",
]

[project.scripts]
seed-saas-data = "app.seed:main"
ingest-knowledge-docs = "app.knowledge.ingestion:main"
run-eval-suite = "app.evals.runner:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.knowledge" = ["docs/*.md"]
